# ml-zoomcamp

./: Dockerfile  README.md  homework 01.ipynb  homework 02.ipynb  homework 03.ipynb  homework 04.ipynb  homework 06.ipynb  pyproject.toml
hw_05/: predict.py  predict_flask.py  test_predict.py
