[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Homework notebboks for the Machine Leraning Zoomcamp course (2025 cohort)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
