[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Homework notebooks for the Machine Leraning Zoomcamp course (2025 cohort)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.120.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
